--- a/Tests/TestLayredNN.ipynb
+++ b/Tests/TestLayredNN.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "9a605024",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "adf00e28",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "793ab56d",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "13838e39",
    "metadata": {},
    "outputs": [
@@ -255,9 +255,323 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9f74906c",
+   "metadata": {},
+   "source": [
+    "### A Batch Of Data\n",
+    "##### Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "23dc7d02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch = [[1,5,6,2],\n",
+    "         [3,2,1,3],\n",
+    "         [5,2,1,2],\n",
+    "         [6,4,8,4],\n",
+    "         [2,8,5,3],\n",
+    "         [1,1,9,4],\n",
+    "         [6,6,0,4],\n",
+    "         [8,7,6,4]]\n",
+    "\n",
+    "shape = [2,4]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83308c09",
+   "metadata": {},
+   "source": [
+    "### A Layer of Neurons and Batch of Data w/ NumPy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "cd4cbec1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 4.8    1.21   2.385]\n",
+      " [ 8.9   -1.81   0.2  ]\n",
+      " [ 1.41   1.051  0.026]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "inputs = [[1,2,3,2.5],\n",
+    "          [2,5,-1,2],\n",
+    "          [-1.5,2.7,3.3,-0.8]]\n",
+    "\n",
+    "weights=[ [0.2, 0.8, -0.5, 1],\n",
+    "         [0.5, -0.91, 0.26, -0.5], \n",
+    "         [-0.26, -0.27, 0.17, 0.87]]\n",
+    "\n",
+    "biases = [2, 3, 0.5]\n",
+    "\n",
+    "layer_outputs = np.dot(inputs, np.array(weights).T) + biases\n",
+    "\n",
+    "print (layer_outputs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0aa54561",
+   "metadata": {},
+   "source": [
+    "### Adding layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "fd6f7874",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.5031  -1.04185 -2.03875]\n",
+      " [ 0.2434  -2.7332  -5.7633 ]\n",
+      " [-0.99314  1.41254 -0.35655]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "inputs = [[1,2,3,2.5],\n",
+    "          [2,5,-1,2],\n",
+    "          [-1.5,2.7,3.3,-0.8]]\n",
+    "\n",
+    "weights=[ [0.2, 0.8, -0.5, 1],\n",
+    "         [0.5, -0.91, 0.26, -0.5], \n",
+    "         [-0.26, -0.27, 0.17, 0.87]]\n",
+    "\n",
+    "biases = [2, 3, 0.5]\n",
+    "\n",
+    "weights2 = [[0.1, -0.14, 0.5],\n",
+    "            [-0.5, 0.12, -0.33],\n",
+    "            [-0.44, 0.73, -0.13]]\n",
+    "\n",
+    "biases2 = [-1,2,-0.5]\n",
+    "\n",
+    "layer_outputs1 = np.dot(inputs, np.array(weights).T) + biases\n",
+    "layer_outputs2 = np.dot(layer_outputs1, np.array(weights2).T) + biases2\n",
+    "\n",
+    "print (layer_outputs2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d361f5c",
+   "metadata": {},
+   "source": [
+    "### Dense Layer Class/ Fully Connected NN\n",
+    "We will have randon initialization of weights and biases.\n",
+    "The idea here is to start a model with non-zero values small enough that they won't affect training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "750e2a8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'spiral_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-18-a9f380de6db8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;31m# create dataset\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mspiral_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msamples\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclasses\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;31m# Create Dense layer with 2 inputs and 3 outputs\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'spiral_data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "class Layer_Dense:\n",
+    "    def __init__(self, n_inputs, n_neurons):\n",
+    "        \n",
+    "        #initialize weights and biases\n",
+    "        self.weights = 0.01 * np.random.randn(n_inputs, n_neurons)\n",
+    "        self.biases = np.zeros((1, n_neurons))\n",
+    "        \n",
+    "    #forward pass\n",
+    "    def forward(self, inputs):\n",
+    "        self.output = np.dot(inputs, self.weights) + self.biases\n",
+    "            \n",
+    "# create dataset\n",
+    "X, y = spiral_data(samples=100, classes=3)\n",
+    "\n",
+    "# Create Dense layer with 2 inputs and 3 outputs\n",
+    "dense1 = Layer_Dense(2, 3)\n",
+    "\n",
+    "# Forward pass of training data through this layer\n",
+    "dense1.forward(X)\n",
+    "\n",
+    "#output\n",
+    "print(dense1.output[:5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "810b2b4e",
+   "metadata": {},
+   "source": [
+    "### Activation Function\n",
+    "##### Linear Activation Fynction\n",
+    "y=x\n",
+    "##### Sigmoid Activation Function\n",
+    "y=1/(1+e^-x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20cd5ceb",
+   "metadata": {},
+   "source": [
+    "### ReLU Activation Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "6c133efa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 0, 3.3, 0, 1.1, 2.2, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "inputs = [0, 2, -1, 3.3, -2.7, 1.1, 2.2, -100]\n",
+    "\n",
+    "output = []\n",
+    "\n",
+    "for i in inputs:\n",
+    "    if i > 0:\n",
+    "        output.append(i)\n",
+    "    else:\n",
+    "        output.append(0)\n",
+    "\n",
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "0a1abf23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Activation_ReLU:\n",
+    "    def forward(self, inputs):\n",
+    "        self.output = np.maximum(0,inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3665a662",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'X,y = spiral_data(samples=100, classes=3)\\n\\ndense1 = Layer_Dense(2,3)\\n\\nactivation1 = Activation_ReLU()\\n\\ndense2 = Layer_Dense(3,3)\\n\\nactivation2 = Activation_Softmax()\\n\\ndense1.forward(X)\\n\\nactivation1.forward(dense1.output)\\n\\ndense2.forward(activation1.output)\\n\\nactivation2.forward(dense2.output)\\n\\nprint(activation2.output[:5])'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Activation_Softmax:\n",
+    "    \n",
+    "    def forward(self, inputs):\n",
+    "        exp_values = np.exp(inputs - np.max(inputs, axis=1, keepdims= True))\n",
+    "        \n",
+    "        probabilities = exp_values / np.sum(exp_values, axis=1, keepdims=True)\n",
+    "        \n",
+    "        self.output = probabilities\n",
+    "        \n",
+    "'''X,y = spiral_data(samples=100, classes=3)\n",
+    "\n",
+    "dense1 = Layer_Dense(2,3)\n",
+    "\n",
+    "activation1 = Activation_ReLU()\n",
+    "\n",
+    "dense2 = Layer_Dense(3,3)\n",
+    "\n",
+    "activation2 = Activation_Softmax()\n",
+    "\n",
+    "dense1.forward(X)\n",
+    "\n",
+    "activation1.forward(dense1.output)\n",
+    "\n",
+    "dense2.forward(activation1.output)\n",
+    "\n",
+    "activation2.forward(dense2.output)\n",
+    "\n",
+    "print(activation2.output[:5])'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2455867",
+   "metadata": {},
+   "source": [
+    "### Calculating Network Error with Loss\n",
+    "The loss function, also referred to as the cost function, is the\n",
+    "algorithm that quantifies how wrong a model is. Loss is the measure of this metric. Since loss is the model’s error, we ideally want it to be 0.\n",
+    "##### Categorical Cross-Entropy Loss\n",
+    "Categorical cross-entropy is explicitly used to compare\n",
+    "a “ground-truth” probability (y or “targets”) and some predicted distribution (y-hat or “predictions”), so it makes sense to use cross-entropy here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ae6e7647",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Loss:\n",
+    "    def calculate(self, output, y):\n",
+    "        sample_losses = self.forward(output, y)\n",
+    "        data_loss = np.mean(sample_losses)\n",
+    "        return data_loss\n",
+    "    \n",
+    "class Loss_CategoricalCrossEntropy(Loss):\n",
+    "    def forward(self, y_pred, y_true):\n",
+    "        samples = len(y_pred)\n",
+    "        y_pred_clipped = np.clip(y_prep, 1e-7, 1 - 1e-7)\n",
+    "        if len(y_true.shape) == 1:\n",
+    "            correct_confidences = y_pred_clipped[\n",
+    "                range(samples),\n",
+    "                y_true\n",
+    "            ]\n",
+    "            "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8401a55b",
+   "id": "993abf7d",
    "metadata": {},
    "outputs": [],
    "source": []
