Now I have a clearer dataset with all classes graphed in one graph

--- a/TheNN-WhenOnlyOriginalWeightsUsed.ipynb
+++ b/TheNN-WhenOnlyOriginalWeightsUsed.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "6c1797d9",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import keras\n",
@@ -34,7 +36,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "c8a4621e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "model = Sequential()  \n",
@@ -45,7 +49,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "7a761e87",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "class Onehot2Int(object):\n",
@@ -62,7 +68,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "fadfb2dd",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "def theOriginalNN(X,Y):\n",
@@ -152,7 +160,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "c6ac75a9",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "def graph_it(Loss, Epoch, Accuracy,scores,X_train, X_test, Y_train, Y_test,Y_tt):\n",
@@ -196,7 +206,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "161182ba",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "def theNewNN(X,Y,a):\n",
@@ -273,7 +285,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "985e4fd0",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "#Old Dataset\n",
@@ -313,7 +327,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "3af43aad",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "#New Dataset\n",
@@ -352,7 +368,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "d0d14662",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1374,6 +1392,7 @@
     "    print(\"****************************The Original NN*************************************\")\n",
     "    a = OldDataset()\n",
     "    for i in np.arange(4,20,2.6): \n",
+    "        \n",
     "        print(\"\\n**************************The \",i,\" NN************************************\")\n",
     "        begin = time.time()\n",
     "        NewDataset(i,a)\n",
@@ -1405,7 +1424,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "40a247e5",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": []
   }
